# libgauge

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
.release-please/: config.json
tests/: CMakeLists.txt  conftest.py  test_calibration.py  test_common.py  test_dummy.py  test_gauge.c  test_scanniing.py  utils.py
tests/__snapshots__/test_calibration/: test_arrow_length[set112756622577_largest.json-pivot1].json  test_arrow_length[set1767591132_largest.json-pivot0].json  test_binarize[calibration112756622577_subtracted.json].json  test_binarize[calibration1767591132_subtracted.json].json  test_calculate[calibration1-source_images_path0].json  test_calculate[set1-source_images_path0].json  test_calculate_background[calibration1].json  test_calculate_background[set1].json  test_intersect[set1767591132_line.json-set112756622577_line.json-source_images_path0].json  test_subtract_background[calibration1767591132.jpg-calibration1background.json].json  test_subtract_background[set112756622577.jpg-set1background.json].json  test_subtract_background[set1767591132.jpg-set1background.json].json
tests/__snapshots__/test_common/: test_frame_from_image_returns_expected_frame.json
tests/__snapshots__/test_scanniing/: test_scan_scale[calibration110956622583.jpg-calibration1ca_data.json].json  test_scan_scale[calibration13156622580.jpg-calibration1ca_data.json].json  test_scan_scale[calibration13756622578.jpg-calibration1ca_data.json].json  test_scan_scale[calibration16756622581.jpg-calibration1ca_data.json].json  test_scan_scale[calibration17356622579.jpg-calibration1ca_data.json].json  test_scan_scale[calibration19156622578.jpg-calibration1ca_data.json].json  test_scan_scale[set110356622581.jpg-set1ca_data.json].json  test_scan_scale[set111556622580.jpg-set1ca_data.json].json  test_scan_scale[set11356622581.jpg-set1ca_data.json].json  test_scan_scale[set11956622578.jpg-set1ca_data.json].json  test_scan_scale[set12556622581.jpg-set1ca_data.json].json  test_scan_scale[set14356622579.jpg-set1ca_data.json].json  test_scan_scale[set14956622579.jpg-set1ca_data.json].json  test_scan_scale[set15556622577.jpg-set1ca_data.json].json  test_scan_scale[set1767591132.jpg-set1ca_data.json].json
tests/__snapshots__/test_scanning/: test_scan_scale[set110356622581.jpg-set1ca_data.json].json  test_scan_scale[set112756622577.jpg-set1ca_data.json].json  test_scan_scale[set12556622581.jpg-set1ca_data.json].json  test_scan_scale[set15556622577.jpg-set1ca_data.json].json  test_scan_scale[set16156622580.jpg-set1ca_data.json].json  test_scan_scale[set16756622581.jpg-set1ca_data.json].json  test_scan_scale[set17356622579.jpg-set1ca_data.json].json  test_scan_scale[set18556622580.jpg-set1ca_data.json].json  test_scan_scale[set19756622581.jpg-set1ca_data.json].json
tests/calibration/: test_binarize.py  test_calculate_background_frame.py  test_subtract_background.py
tests/common/: test_frame.py
tests/examples/test_tu/test_json/: test_calibration_roundtrip.json  test_float_roundtrip.json  test_line_roundtrip.json
tests/fixtures/calibration/1/: 12756622577_subtracted.json  767591132_binarized.json  767591132_largest.json  background.json  binarized_12756622577.json  binarized_767591132.json  largest_blob_12756622577.json  largest_blob_767591132.json  subtracted_12756622577.json  subtracted_767591132.json
tests/fixtures/common/: sample_grayscaled_1.json
tests/fixtures/set/1/: 00767591132_binarized.json  00767591132_subtracted.json  12756622577_largest.json  12756622577_line.json  767591132_line.json  ca_data.json  ca_data_no_spin.json
tests/snapshots/test_cv/test_arrow_length/: test_arrow_length__set_1_00767591132.json  test_arrow_length__set_1_12756622577.json
tests/snapshots/test_cv/test_binarize/: test_binarize__set_1_12756622577.json
tests/snapshots/test_cv/test_blob_to_line/: test_blob_to_line__set_1_00767591132.json  test_blob_to_line__set_1_12756622577.json
tests/snapshots/test_cv/test_extract_largest_blob/: test_extract_largest_blob__set_1_00767591132.json  test_extract_largest_blob__set_1_12756622577.json
tests/snapshots/test_cv/test_intersect_lines/: test_intersect_lines__set_1.json  test_intersect_lines__set_1_x.json  test_intersect_lines__set_1_y.json
tests/snapshots/test_cv/test_subtract_background/: test_subtract_background__set_1_12756622577.json
tests/snapshots/test_gauge/: test_calculate_background__set_1.json
tests/snapshots/test_gauge/test_calibrate/: test_calibrate__set_1.json
tests/test_cv/: CMakeLists.txt  test_arrow_length.c  test_binarize.c  test_blob_to_line.c  test_calculate_background.c  test_extract_largest_blob.c  test_intersect_lines.c  test_subtract_background.c
tests/test_gauge/: CMakeLists.txt  test_calibrate.c  test_calibrate_by_axis_intersection.c  test_calibrate_spin.c  test_measure.c  test_scan_radial.c  test_update_background.c
tests/test_tu/: CMakeLists.txt  test_convert.c  test_draw.c  test_image.c  test_json.c  test_snapshot.c
tests/test_utils/: CMakeLists.txt  test_normalize_angle.c
tests/tu/: CMakeLists.txt  convert.c  examples.c  fixtures.c  image.c  json.c  snapshot.c  utils.c
tests/tu/tu/: convert.h  examples.h  fixtures.h  image.h  json.h  snapshot.h  utils.h
tests/utils/: CMakeLists.txt  utils.c  utils.h
(+38 files in other folders)
